[package]
name = "vlc3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
libc = "0.2"
syscalls = "0.6.13"
termios = "0.3"
argparse = "0.2.2"
lazy_static = "1.4.0"
enum-iterator = "1.4.1"
